# machine-learning-projects

extract-text/: pyproject.toml  scripts.py
extract-text/extract_text/: __main__.py
lofi-generator/: pyproject.toml  scripts.py
lofi-generator/lofi_generator/: __main__.py  lstm.py
netflix-recommendation-system/: pyproject.toml  scripts.py
netflix-recommendation-system/netflix_recommendation_system/: __main__.py
password-strength-checker/: pyproject.toml  scripts.py
password-strength-checker/password_strength_checker/: __main__.py
spotify-recommendation/: pyproject.toml  scripts.py
spotify-recommendation/spotify_recommendation/: __main__.py
text-classification/: pyproject.toml  scripts.py
text-classification/text_classification/: __main__.py
text-summarization/: pyproject.toml  scripts.py
text-summarization/text_summarization/: __main__.py
