[tool.poetry]
name = "lofi-generator"
version = "0.1.0"
description = ""
authors = ["Paul Luna <paulluna0215@gmail.com>"]
readme = "README.md"
packages = [{include = "lofi_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
