[tool.poetry]
name = "netflix-recommendation-system"
version = "0.1.0"
description = ""
authors = ["Paul Luna <paulluna0215@gmail.com>"]
readme = "README.md"
packages = [{include = "netflix_recommendation_system"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
nltk = "^3.8.1"

[tool.poetry.scripts]
main = "scripts:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
