[tool.poetry]
name = "password-strength-checker"
version = "0.1.0"
description = ""
authors = ["Paul Luna <paulluna0215@gmail.com>"]
readme = "README.md"
packages = [{include = "password_strength_checker"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"


[tool.poetry.scripts]
main = "scripts:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
