[tool.poetry]
name = "spotify-recommendation"
version = "0.1.0"
description = ""
authors = ["Paul Luna <paulluna0215@gmail.com>"]
readme = "README.md"
packages = [{include = "spotify_recommendation"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
tqdm = "^4.64.1"
scikit-learn = "^1.2.1"

[tool.poetry.scripts]
main = "scripts:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
