[tool.poetry]
name = "text-classification"
version = "0.1.0"
description = ""
authors = ["luna215 <paulluna0215@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.3.2"


[tool.poetry.scripts]
main = "scripts:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
