[tool.poetry]
name = "text-summarization"
version = "0.1.0"
description = ""
authors = ["Paul Luna <paulluna0215@gmail.com>"]
readme = "README.md"
packages = [{include = "text_summarization"}]

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"

[tool.poetry.scripts]
main = "scripts:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
